<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:src="@drawable/card_back" />

    <ProgressBar
        android:id="@+id/pBIDLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateBehavior="repeat"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:minWidth="50dp"
        android:minHeight="10dp"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/homeRLID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/currentLayoutID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextTextID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/enter_city_name"
                    android:inputType="text"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/searchViewID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_search" />
            </LinearLayout>

            <TextView
                android:id="@+id/currentCityID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/current_weather"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@android:drawable/ic_menu_mylocation" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/design_default_color_primary_variant"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/currentTemperatureID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:gravity="center|center_horizontal"
                        android:text="@string/avgtemp"
                        android:textColor="@color/white"
                        android:textSize="60sp" />

                    <TextView
                        android:id="@+id/currentSeasonID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/season"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/currentWindSpeedID"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="25dp"
                                android:text="@string/wind_speed"
                                android:textColor="@color/white"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/currentHumidityID"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/humidity"
                                android:textColor="@color/white"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/currentWeatherIconID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/app_name"
                            app:srcCompat="@drawable/baseline_cloud_24"
                            />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/next_4_days"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="25dp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpagerID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="80dp"
                android:paddingEnd="80dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>