<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/random_list_container"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:background="@android:color/transparent"
    app:cardCornerRadius="16dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink">

        <TextView
            android:id="@+id/dayTextViewID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/viewpagerTitle"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/dayswheatherIconID"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/dayTextViewID"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:id="@+id/tempLinearlayoutID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dayswheatherIconID"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/avgtempID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center|center_horizontal"
                android:text="@string/avgtemp"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tempLinearlayoutID"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/arrow_down_float" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal"
                    android:gravity="center|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/maxTemp_C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minmaxtempcelcius"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/abcID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degree"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/arrow_up_float" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/minTemp_C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minmaxtempcelcius"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degree"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>